infra/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banterbus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: dev.banterbus.games
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: banterbus
            port:
              number: 80
  tls:
  - hosts:
    - dev.banterbus.games
    secretName: banterbus-dev-tls
